[gd_scene load_steps=6 format=2]

[ext_resource path="res://game/BlackWhiteThem.tres" type="Theme" id=1]
[ext_resource path="res://game/ui/MapDownloadPanel/MapSourceButton.tscn" type="PackedScene" id=2]
[ext_resource path="res://game/ui/BeatSaverPanel/beatsaver_icon.png" type="Texture" id=3]
[ext_resource path="res://game/ui/MapDownloadPanel/MapDownloadPanel.gd" type="Script" id=4]
[ext_resource path="res://game/ui/BeatSageUI/beat_sage_icon.png" type="Texture" id=5]

[node name="MapDownloadPanel" type="Panel"]
margin_right = 1536.0
margin_bottom = 960.0
theme = ExtResource( 1 )
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Margin" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 25
custom_constants/margin_top = 25
custom_constants/margin_left = 25
custom_constants/margin_bottom = 25
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBox" type="VBoxContainer" parent="Margin"]
margin_left = 25.0
margin_top = 25.0
margin_right = 1511.0
margin_bottom = 935.0

[node name="Title" type="Label" parent="Margin/VBox"]
margin_right = 1486.0
margin_bottom = 48.0
text = "Online Map Sources"

[node name="Grid" type="GridContainer" parent="Margin/VBox"]
margin_top = 52.0
margin_right = 1486.0
margin_bottom = 910.0
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BeatSaverButton" parent="Margin/VBox/Grid" instance=ExtResource( 2 )]
margin_bottom = 858.0
texture = ExtResource( 3 )
image_margin = 50
description = "Beat Saver is an online collection of custom Beat Saber levels. You can search and download songs based on song title, song artist, or by mapper (level artist)."

[node name="BeatSageButton" parent="Margin/VBox/Grid" instance=ExtResource( 2 )]
margin_left = 498.0
margin_right = 992.0
margin_bottom = 858.0
texture = ExtResource( 5 )
description = "Beat Sage is an AI that creates free custom levels for Beat Saber. Given a song on YouTube, the system will output a Beat Saber level that is matched with that song!"

[connection signal="pressed" from="Margin/VBox/Grid/BeatSaverButton" to="." method="_on_BeatSaverButton_pressed"]
[connection signal="pressed" from="Margin/VBox/Grid/BeatSageButton" to="." method="_on_BeatSageButton_pressed"]
